# URL_Shortner

./: .gitignore  README.md  main.py  pyproject.toml
src/dao/: urlDao.py
src/models/db_models/: __init__.py  tinydb_instance.py  urlModel.py
src/resources/: variables.py
src/routers/: __init__.py  urlRouter.py
src/service/: __init__.py  urlService.py
src/utils/: dateUtil.py  validationUtil.py
tests/: conftest.py
tests/unit_tests/: api_test.py
